Fix map overlap with skyline

--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,7 @@ body {
   padding: 0 1%;
 }
 .skyline img {
-  margin-bottom: -100px;
+  margin-bottom: -90px;
 }
 .video-container { 
     position: relative;   
